fix(nc-gui): form view logo alignment issue

--- a/packages/nc-gui/ee/assets/style.scss
+++ b/packages/nc-gui/ee/assets/style.scss
@@ -950,7 +950,6 @@ svg.nc-virtual-cell-icon {
   }
 }
 .nc-toolbar-dropdown-search-field-input {
-
   .nc-search-icon {
     @apply text-gray-500;
   }
@@ -1127,7 +1126,6 @@ svg.nc-virtual-cell-icon {
   transform: scale(0.5); /* Scale down and fade out */
 }
 
-
 @keyframes dragStart {
   0% {
     transform: scale(1.3) rotate(0deg);
@@ -1136,5 +1134,12 @@ svg.nc-virtual-cell-icon {
   100% {
     transform: scale(1) rotate(0.5deg);
     opacity: 1;
+  }
+}
+
+.nc-form-logo,
+.nc-shared-form-logo {
+  img {
+    @apply m-0;
   }
 }
